[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/main/career/ui/career-win.gd" type="Script" id=1]
[ext_resource path="res://src/main/career/ui/career-win-world.gd" type="Script" id=4]
[ext_resource path="res://src/main/ui/wallpaper/Wallpaper.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/ui/theme/chalkboard-54.theme" type="Theme" id=6]
[ext_resource path="res://assets/main/career/ui/chalkboard.png" type="Texture" id=7]
[ext_resource path="res://assets/main/career/ui/chalkboard-separator-bottom.png" type="Texture" id=8]
[ext_resource path="res://src/main/world/environment/EmptyEnvironment.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/main/career/ui/chalkboard-title-0b.png" type="Texture" id=10]
[ext_resource path="res://assets/main/career/ui/chalkboard-title-0a.png" type="Texture" id=11]
[ext_resource path="res://assets/main/career/ui/chalkboard-distance.png" type="Texture" id=12]
[ext_resource path="res://assets/main/career/ui/chalkboard-customer-3.png" type="Texture" id=13]
[ext_resource path="res://assets/main/career/ui/chalkboard-separator-top.png" type="Texture" id=14]
[ext_resource path="res://assets/main/career/ui/chalkboard-money.png" type="Texture" id=15]
[ext_resource path="res://assets/main/career/ui/chalkboard-time.png" type="Texture" id=16]
[ext_resource path="res://src/main/career/ui/ChalkboardMapRow.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/main/ui/font/schoolbell-regular.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://src/main/career/ui/map-row-updater.gd" type="Script" id=31]
[ext_resource path="res://assets/main/puzzle/applause.wav" type="AudioStream" id=33]
[ext_resource path="res://src/main/career/ui/chalkboard-served.gd" type="Script" id=35]
[ext_resource path="res://src/main/career/ui/chalkboard-earned.gd" type="Script" id=36]
[ext_resource path="res://src/main/ui/MusicPopup.tscn" type="PackedScene" id=37]
[ext_resource path="res://src/main/career/ui/chalkboard-time.gd" type="Script" id=38]
[ext_resource path="res://src/main/career/ui/chalkboard-steps.gd" type="Script" id=39]
[ext_resource path="res://src/main/career/ui/chalkboard-title.gd" type="Script" id=40]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 0.0784314 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 0.313726 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0.156863 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=10]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Bg" type="CanvasLayer" parent="."]
layer = -1

[node name="Wallpaper" parent="Bg" instance=ExtResource( 5 )]

[node name="Chalkboard" type="TextureRect" parent="Bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -291.2
margin_right = 480.0
margin_bottom = 291.2
texture = ExtResource( 7 )
expand = true

[node name="Shadow" type="Polygon2D" parent="Bg/Chalkboard"]
show_behind_parent = true
color = Color( 0, 0, 0, 0.392157 )
antialiased = true
polygon = PoolVector2Array( 1, 0, 10, -10, 970, -10, 970, 572.4, 960, 581.4, 1, 581.4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Bg/Chalkboard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_constants/separation = 0

[node name="Spacer1" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
margin_right = 930.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )

[node name="TitleRow" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
modulate = Color( 1, 0.5, 0.945313, 1 )
margin_top = 6.0
margin_right = 930.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 75 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/Chalkboard/VBoxContainer/TitleRow"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 40 )

[node name="Control1" type="Control" parent="Bg/Chalkboard/VBoxContainer/TitleRow/HBoxContainer"]
margin_right = 246.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/TitleRow/HBoxContainer/Control1"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -37.5
margin_right = 38.5
margin_bottom = 32.5
texture = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="Bg/Chalkboard/VBoxContainer/TitleRow/HBoxContainer"]
margin_left = 250.0
margin_right = 679.0
margin_bottom = 75.0
theme = ExtResource( 6 )
text = "LOOK WHAT WE DID"

[node name="Control2" type="Control" parent="Bg/Chalkboard/VBoxContainer/TitleRow/HBoxContainer"]
margin_left = 683.0
margin_right = 930.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/TitleRow/HBoxContainer/Control2"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -37.5
margin_right = 38.5
margin_bottom = 32.5
texture = ExtResource( 10 )
expand = true

[node name="Separator1" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
modulate = Color( 0.726563, 0.5, 1, 1 )
margin_top = 81.0
margin_right = 930.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 25 )

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/Separator1"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -23.0
margin_right = 432.0
margin_bottom = 13.0
texture = ExtResource( 14 )
expand = true

[node name="ServedStepsRow" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
margin_top = 106.0
margin_right = 930.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 90 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Served" type="MarginContainer" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer"]
margin_right = 463.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 35 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Served"]
margin_left = 5.0
margin_top = 5.0
margin_right = 458.0
margin_bottom = 85.0

[node name="Control" type="Control" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Served/HBoxContainer"]
modulate = Color( 0.501961, 0.882353, 1, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Served/HBoxContainer/Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -35.0
margin_right = 38.5
margin_bottom = 35.0
texture = ExtResource( 13 )
expand = true

[node name="Label2" type="Label" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Served/HBoxContainer"]
modulate = Color( 0.5, 0.883333, 1, 1 )
margin_left = 84.0
margin_right = 266.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Served:"
valign = 1

[node name="Label3" type="Label" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Served/HBoxContainer"]
margin_left = 270.0
margin_top = 2.0
margin_right = 453.0
margin_bottom = 77.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
text = "132"
align = 2

[node name="Steps" type="MarginContainer" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer"]
margin_left = 467.0
margin_right = 930.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 39 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Steps"]
margin_left = 5.0
margin_top = 5.0
margin_right = 443.0
margin_bottom = 85.0

[node name="Control" type="Control" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Steps/HBoxContainer"]
modulate = Color( 0.501961, 0.882353, 1, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Steps/HBoxContainer/Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -35.0
margin_right = 38.5
margin_bottom = 35.0
texture = ExtResource( 12 )
expand = true

[node name="Label2" type="Label" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Steps/HBoxContainer"]
modulate = Color( 0.501961, 0.882353, 1, 1 )
margin_left = 84.0
margin_right = 259.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Steps:"
valign = 1

[node name="Label3" type="Label" parent="Bg/Chalkboard/VBoxContainer/ServedStepsRow/HBoxContainer/Steps/HBoxContainer"]
margin_left = 263.0
margin_top = 2.0
margin_right = 438.0
margin_bottom = 77.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
text = "23"
align = 2

[node name="EarnedTimeRow" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
margin_top = 196.0
margin_right = 930.0
margin_bottom = 286.0
rect_min_size = Vector2( 0, 90 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Earned" type="MarginContainer" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer"]
margin_right = 463.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 36 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Earned"]
margin_left = 5.0
margin_top = 5.0
margin_right = 458.0
margin_bottom = 85.0

[node name="Control" type="Control" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Earned/HBoxContainer"]
modulate = Color( 0.550781, 1, 0.5, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Earned/HBoxContainer/Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -35.0
margin_right = 38.5
margin_bottom = 35.0
texture = ExtResource( 15 )
expand = true

[node name="Label2" type="Label" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Earned/HBoxContainer"]
modulate = Color( 0.54902, 1, 0.501961, 1 )
margin_left = 84.0
margin_right = 262.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Earned:"
valign = 1

[node name="Label3" type="Label" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Earned/HBoxContainer"]
margin_left = 266.0
margin_top = 2.0
margin_right = 453.0
margin_bottom = 77.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
text = "¥999,999"
align = 2

[node name="Time" type="MarginContainer" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer"]
margin_left = 467.0
margin_right = 930.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 38 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Time"]
margin_left = 5.0
margin_top = 5.0
margin_right = 443.0
margin_bottom = 85.0

[node name="Control" type="Control" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Time/HBoxContainer"]
modulate = Color( 0.54902, 1, 0.501961, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Time/HBoxContainer/Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -35.0
margin_right = 38.5
margin_bottom = 35.0
texture = ExtResource( 16 )
expand = true

[node name="Label2" type="Label" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Time/HBoxContainer"]
modulate = Color( 0.54902, 1, 0.501961, 1 )
margin_left = 84.0
margin_right = 259.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Time:"
valign = 1

[node name="Label3" type="Label" parent="Bg/Chalkboard/VBoxContainer/EarnedTimeRow/HBoxContainer/Time/HBoxContainer"]
margin_left = 263.0
margin_top = 2.0
margin_right = 438.0
margin_bottom = 77.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
text = "15:03"
align = 2

[node name="MapRowUpdater" type="Node" parent="Bg/Chalkboard/VBoxContainer"]
script = ExtResource( 31 )
map_path = NodePath("../MapRow")

[node name="MapRow" parent="Bg/Chalkboard/VBoxContainer" instance=ExtResource( 17 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 286.0
margin_right = 930.0
margin_bottom = 446.0

[node name="Separator2" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
modulate = Color( 1, 0.580392, 0.501961, 1 )
margin_top = 446.0
margin_right = 930.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 25 )

[node name="TextureRect" type="TextureRect" parent="Bg/Chalkboard/VBoxContainer/Separator2"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -9.0
margin_right = 432.0
margin_bottom = 9.0
texture = ExtResource( 8 )
expand = true

[node name="ButtonRow" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
margin_top = 471.0
margin_right = 930.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 63 )

[node name="Button" type="Button" parent="Bg/Chalkboard/VBoxContainer/ButtonRow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Ok"

[node name="Spacer2" type="Control" parent="Bg/Chalkboard/VBoxContainer"]
margin_top = 534.0
margin_right = 930.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 6 )

[node name="ApplauseSound" type="AudioStreamPlayer" parent="Bg"]
stream = ExtResource( 33 )
bus = "Sound Bus"

[node name="World" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Environment" parent="World" instance=ExtResource( 9 )]

[node name="Camera2D" type="Camera2D" parent="World"]
offset = Vector2( 512, 300 )
current = true

[node name="Ui" type="CanvasLayer" parent="."]

[node name="MusicPopup" parent="Ui" instance=ExtResource( 37 )]

[connection signal="pressed" from="Bg/Chalkboard/VBoxContainer/ButtonRow/Button" to="." method="_on_Button_pressed"]
